--- a/Works.html
+++ b/Works.html
@@ -124,6 +124,56 @@
                             <img src="img/jewellry1.jpg" alt="jewellry">
                         </a>
                     </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="img/ads.jpg">
+                            <img src="img/ads.jpg" alt="jewellry">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="img/banner.jpg">
+                            <img src="img/banner.jpg" alt="jewellry">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="img/logo.jpg">
+                            <img src="img/logo.jpg" alt="jewellry">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="img/logo3.jpg">
+                            <img src="img/logo3.jpg" alt="jewellry">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="img/tshirt2.jpg">
+                            <img src="img/tshirt2.jpg" alt="jewellry">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="img/logo1.jpg">
+                            <img src="img/logo1.jpg" alt="jewellry">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="img/standee-design.jpg">
+                            <img src="img/standee-design.jpg" alt="jewellry">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="img/tshirt.jpg">
+                            <img src="img/tshirt.jpg" alt="jewellry">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="img/logo4.jpg">
+                            <img src="img/logo4.jpg" alt="jewellry">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="img/tshirt3.jpg">
+                            <img src="img/tshirt3.jpg" alt="jewellry">
+                        </a>
+                    </div>
 
                 </div>
 
@@ -197,9 +247,10 @@
                     <div class="widget-links">
                         <h3>Get in touch</h3>
                         <ul>
-                            <li><a href="#">hello@graphicdesign.com </a></li>
-                            <li><a href="#">+91 891 929 9341</a></li>
-                            <li><a href="#">+91 756 931 1901</a></li>
+                            <li><a data-mce-href="mailto:hi@unlimiteddesign.in"
+                                    href="mailto:hi@unlimiteddesign.in">hi@unlimiteddesign.in</a></li>
+                            <li><a>+91 891 929 9341</a></li>
+                            <li><a>+91 756 931 1901</a></li>
                         </ul>
                     </div>
                 </div>
@@ -211,7 +262,6 @@
             <p>Copyright 2019. All rights reserved.</p>
         </div>
     </footer>
-    <a data-scroll href="#header" id="scroll-to-top"><i class="ti-arrow-up"></i></a>
 
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
 
@@ -232,8 +282,20 @@
     <script>
         baguetteBox.run('.tz-gallery');
     </script>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5eb7e6ee967ae56c52186cd9/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 
-<!-- Mirrored from html.dynamiclayers.net/te/saasdesk/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 06 May 2020 15:09:34 GMT -->
 
 </html>
