--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                                 <div class="d-none alert alert-danger" role="alert" data-error-message>
                                     Please fill all fields correctly.
                                 </div>
-                                <button type="submit" name="submit" value="Send" class="default-btn">                                    
+                                <button type="submit" name="submit" value="Send" class="default-btn">
                                     Send
                                 </button>
                             </div>
@@ -131,23 +131,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="col-8">
-                <form action="mail_handler.php" method="post" name="form" class="form-box">
-                    <label for="name">Name</label><br>
-                    <input type="text" name="name" class="inp" placeholder="Enter Your Name" required><br>
-                    <label for="email">Email ID</label><br>
-                    <input type="email" name="email" class="inp" placeholder="Enter Your Email" required><br>
-                    <label for="phone">Phone</label><br>
-                    <input type="tel" name="phone" class="inp" placeholder="Enter Your Phone" required><br>
-                    <label for="message">Message</label><br>
-                    <textarea name="msg" class="msg-box" placeholder="Enter Your Message Here..."
-                        required></textarea><br>
-                    <input type="submit" name="submit" value="Send" class="sub-btn">
-                </form>
-                    <div class="d-none alert alert-success" role="alert" success-message>
-                                        Thanks, a member of our team will be in touch shortly.
-                    </div>
-            </div> -->
         </div>
     </section>
 
@@ -217,9 +200,10 @@
                     <div class="widget-links">
                         <h3>Get in touch</h3>
                         <ul>
-                            <li><a data-mce-href="mailto:hi@unlimiteddesign.in" href="mailto:hi@unlimiteddesign.in">info@freeagentsla.com&#65279;</a></li>
-                            <li><a href="#">+91 891 929 9341</a></li>
-                            <li><a href="#">+91 756 931 1901</a></li>
+                            <li><a data-mce-href="mailto:hi@unlimiteddesign.in"
+                                    href="mailto:hi@unlimiteddesign.in">hi@unlimiteddesign.in</a></li>
+                            <li><a>+91 891 929 9341</a></li>
+                            <li><a>+91 756 931 1901</a></li>
                         </ul>
                     </div>
                 </div>
@@ -231,7 +215,7 @@
             <p>Copyright 2019. All rights reserved.</p>
         </div>
     </footer>
-    <a data-scroll href="#header" id="scroll-to-top"><i class="ti-arrow-up"></i></a>
+    
 
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
 
@@ -248,8 +232,20 @@
     <script src="js/vendor/wow.min.js"></script>
 
     <script src="js/main.js"></script>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5eb7e6ee967ae56c52186cd9/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 
-<!-- Mirrored from html.dynamiclayers.net/te/saasdesk/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 06 May 2020 15:09:34 GMT -->
 
 </html>
