--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="hero-content">
                         <h1>Unlimited Web Design & Graphic Design For a Flat Monthly Fee</h1>
                         <p>Unlimited Requests | Unlimited Revisions
-                            7 Day Money Back Guarantee</p>
+                            14 Day Money Back Guarantee</p>
                         <!-- <h3>100% Money Back Guarantee</h3> -->
                         <a href="contact.html" class="default-btn m-r-15">See Our Pricing</a>
                         <a href="Works.html" class="default-btn m-r-15">Works</a>
@@ -320,9 +320,10 @@
                     <div class="widget-links">
                         <h3>Get in touch</h3>
                         <ul>
-                            <li><a href="#">hello@graphicdesign.com </a></li>
-                            <li><a href="#">+91 891 929 9341</a></li>
-                            <li><a href="#">+91 756 931 1901</a></li>
+                            <li><a data-mce-href="mailto:hi@unlimiteddesign.in"
+                                    href="mailto:hi@unlimiteddesign.in">hi@unlimiteddesign.in</a></li>
+                            <li><a>+91 891 929 9341</a></li>
+                            <li><a>+91 756 931 1901</a></li>
                         </ul>
                     </div>
                 </div>
@@ -334,7 +335,7 @@
             <p>Copyright 2019. All rights reserved.</p>
         </div>
     </footer>
-    <a data-scroll href="#header" id="scroll-to-top"><i class="ti-arrow-up"></i></a>
+    
 
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
 
@@ -354,7 +355,8 @@
     <script>
         baguetteBox.run('.tz-gallery');
     </script>
-    <!--Start of Tawk.to Script-->
+
+<!--Start of Tawk.to Script-->
 <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
