--- a/objectsource.html
+++ b/objectsource.html
@@ -74,7 +74,9 @@
                     <div class="col-md-3 work-decrip">
                         <h2>The Brief
                         </h2>
-                        <p>Object Source Inc is the fastest growing company in C-Store customizable apps. We are specialized in building C-Store apps, all apps works with major POS systems like Verifone, Gilbarco and Square.
+                        <p>Object Source Inc is the fastest growing company in C-Store customizable apps. We are
+                            specialized in building C-Store apps, all apps works with major POS systems like Verifone,
+                            Gilbarco and Square.
                         </p>
                         <a href="https://www.mycstorereports.com" class="default-btn m-r-15">Visit Website</a>
                     </div>
@@ -132,9 +134,10 @@
                     <div class="widget-links">
                         <h3>Get in touch</h3>
                         <ul>
-                            <li><a href="#">hello@graphicdesign.com </a></li>
-                            <li><a href="#">+91 891 929 9341</a></li>
-                            <li><a href="#">+91 756 931 1901</a></li>
+                            <li><a data-mce-href="mailto:hi@unlimiteddesign.in"
+                                    href="mailto:hi@unlimiteddesign.in">hi@unlimiteddesign.in</a></li>
+                            <li><a>+91 891 929 9341</a></li>
+                            <li><a>+91 756 931 1901</a></li>
                         </ul>
                     </div>
                 </div>
@@ -146,7 +149,6 @@
             <p>Copyright 2019. All rights reserved.</p>
         </div>
     </footer>
-    <a data-scroll href="#header" id="scroll-to-top"><i class="ti-arrow-up"></i></a>
 
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
 
@@ -167,8 +169,19 @@
     <script>
         baguetteBox.run('.tz-gallery');
     </script>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5eb7e6ee967ae56c52186cd9/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
-
-<!-- Mirrored from html.dynamiclayers.net/te/saasdesk/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 06 May 2020 15:09:34 GMT -->
 
 </html>
