--- a/pricing.html
+++ b/pricing.html
@@ -76,15 +76,13 @@
                             <h2>₹3,000/-</h2>
                             <p>Pay Per Request</p>
                         </div>
-                        <ul class="pricing-list">
-                            <li class="text-muted text-strikethrough">7 Day Money Back Guarantee</li>
+                        <ul class="pricing-list">                            
                             <li>1 Design Requests</li>
-                            <li>Unlimited Revisions</li>
+                            <li>Unlimited Revisions</li>    
+                            <li>Logo Creation</li>         
+                            <li>Prints, Packaging, Social media designs and much much more.</li>                   
                             <li>1 Brands</li>
-                            <li>48hrs Output</li>
-                            <li class="text-muted text-strikethrough">Logo Creation</li>
-                            <li class="text-muted text-strikethrough">Web and Mobile App</li>
-                            <li class="text-muted text-strikethrough">Custom illustrations</li>
+                            <li>48hrs Output</li>                                                     
                             <li>All source files delivered</li>
                             <li>No Long Term Contract</li>
                             <li>eMail Support</li>
@@ -248,9 +246,10 @@
                     <div class="widget-links">
                         <h3>Get in touch</h3>
                         <ul>
-                            <li><a href="#">hello@graphicdesign.com </a></li>
-                            <li><a href="#">+91 891 929 9341</a></li>
-                            <li><a href="#">+91 756 931 1901</a></li>
+                            <li><a data-mce-href="mailto:hi@unlimiteddesign.in"
+                                    href="mailto:hi@unlimiteddesign.in">hi@unlimiteddesign.in</a></li>
+                            <li><a>+91 891 929 9341</a></li>
+                            <li><a>+91 756 931 1901</a></li>
                         </ul>
                     </div>
                 </div>
@@ -262,7 +261,7 @@
             <p>Copyright 2019. All rights reserved.</p>
         </div>
     </footer>
-    <a data-scroll href="#header" id="scroll-to-top"><i class="ti-arrow-up"></i></a>
+
 
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
 
@@ -279,8 +278,20 @@
     <script src="js/vendor/wow.min.js"></script>
 
     <script src="js/main.js"></script>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5eb7e6ee967ae56c52186cd9/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 
-<!-- Mirrored from html.dynamiclayers.net/te/saasdesk/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 06 May 2020 15:09:34 GMT -->
 
 </html>
