--- a/jamawealth.html
+++ b/jamawealth.html
@@ -132,9 +132,10 @@
                     <div class="widget-links">
                         <h3>Get in touch</h3>
                         <ul>
-                            <li><a href="#">hello@graphicdesign.com </a></li>
-                            <li><a href="#">+91 891 929 9341</a></li>
-                            <li><a href="#">+91 756 931 1901</a></li>
+                            <li><a data-mce-href="mailto:hi@unlimiteddesign.in"
+                                    href="mailto:hi@unlimiteddesign.in">hi@unlimiteddesign.in</a></li>
+                            <li><a>+91 891 929 9341</a></li>
+                            <li><a>+91 756 931 1901</a></li>
                         </ul>
                     </div>
                 </div>
@@ -146,7 +147,7 @@
             <p>Copyright 2019. All rights reserved.</p>
         </div>
     </footer>
-    <a data-scroll href="#header" id="scroll-to-top"><i class="ti-arrow-up"></i></a>
+    
 
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
 
@@ -167,8 +168,19 @@
     <script>
         baguetteBox.run('.tz-gallery');
     </script>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5eb7e6ee967ae56c52186cd9/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
-
-<!-- Mirrored from html.dynamiclayers.net/te/saasdesk/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 06 May 2020 15:09:34 GMT -->
 
 </html>
