--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
                 <div class="col-md-4">
                     <div class="email-section mb-40">
                         <h2>Email</h2>
-                        <a href="mailto:hi@unlimiteddesign.in" class="lead">hi@unlimiteddesign.in</a>
+                        <a href="mailto:" hi@unlimiteddesign.in" class="lead">hi@unlimiteddesign.in</a>
                     </div>
                     <div class="email-section">
                         <h2>Call</h2>
@@ -215,7 +215,7 @@
             <p>Copyright 2019. All rights reserved.</p>
         </div>
     </footer>
-    
+
 
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
 
