--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                     </div>
                     <div class="header-btn">
                         <a href="contact.html" class="signup-btn">Contact us</a>
+                        <div class="ds-top-bar-right">
+                            <div class="ds-top-bar-icon"> <span class="icon-Phone-Nopng"></span></div>                          
+                        </div>
                     </div>
                 </div>
             </nav>
@@ -68,9 +71,10 @@
             <div class="row">
                 <div class="col-lg-6 sm-padding">
                     <div class="hero-content">
-                        <h1>Unlimited Web Design & Graphic Design For a Flat Monthly Fee</h1>
-                        <p>Unlimited Requests | Unlimited Revisions
-                            14 Day Money Back Guarantee</p>
+                        <h1>Unlimited Graphic Design For a Flat Monthly Fee</h1>
+                        <p>UnlimimtedDesign gives you a professional designer to help you with all of your creative
+                            needs.
+                            <br> No interviews, no contracts, unlimited designs.</p>
                         <!-- <h3>100% Money Back Guarantee</h3> -->
                         <a href="contact.html" class="default-btn m-r-15">See Our Pricing</a>
                         <a href="Works.html" class="default-btn m-r-15">Works</a>
@@ -86,6 +90,14 @@
         </div>
     </section>
 
+
+    <!-- <section class="offer-banner-image">
+        <div class="hero-content">
+            <img src="img/web-banner-ads.jpg" alt="img">
+        </div>
+    </section> -->
+
+
     <section id="features" class="features-section bg-grey bd-bottom padding">
         <div class="shape"></div>
         <div class="container">
@@ -93,9 +105,11 @@
                 <div class="col-lg-4 sm-padding wow fadeInLeft" data-wow-delay="200ms">
                     <div class="section-heading mb-40">
                         <h2>Why Choose Unlimited Design?</h2>
-                        <p>Our monthly subscription service gives you unlimited small graphic design task​​​​s. It's
-                            simple, affordable, and headache-free.</p>
-                        <a href="contact.html" class="default-btn">Start 7 Days Free Trial</a>
+                        <p>Our monthly subscription service gives you unlimited graphic design
+                            task&#8203;&#8203;&#8203;&#8203;s. It's
+                            simple, affordable, and headache-free.
+                        </p>
+                        <a href="contact.html" class="default-btn">Start 14 Days Free Trial</a>
                     </div>
                 </div>
                 <div class="col-lg-8 sm-padding">
@@ -103,36 +117,37 @@
                         <div class="col-md-6 padding-15 wow fadeInUp" data-wow-delay="200ms">
                             <div class="features-item">
                                 <img src="img/design.svg" alt="img">
-                                <h3>Unlimited Graphic Design</h3>
-                                <p>Logos, Flyers, Business cards, Magazines, Branding, Custom Graphics, illustrations
-                                    and more!</p>
+                                <h3>Unlimited requests
+                                </h3>
+                                <p>Make as many design requests and revisions as you want.
+                                </p>
                             </div>
                         </div>
                         <div class="col-md-6 padding-15 wow fadeInUp" data-wow-delay="300ms">
                             <div class="features-item offset-top">
-                                <img src="img/revision.svg" alt="img">
-                                <h3>Unlimited Web Design
+                                <img src="img/fast-tornaround.svg" alt="img">
+                                <h3>Fast and reliable
                                 </h3>
-                                <p>UI UX, Wireframes, E-commerce, Landing Pages, Apps, Mobile Design, Banners, Ads and
-                                    more!</p>
+                                <p>Get your designs back within 24-48h, Monday to Friday, all year long.
+                                </p>
                             </div>
                         </div>
                         <div class="col-md-6 padding-15 wow fadeInUp" data-wow-delay="400ms">
                             <div class="features-item">
-                                <img src="img/fast-tornaround.svg" alt="img">
-                                <h3>Unlimited Web Development
+                                <img src="img/fee.svg" alt="img">
+                                <h3>Fixed monthly rate
                                 </h3>
-                                <p>Html, CSS, Jquery, Javascript, wordpress, E-commerce and more!
-
+                                <p>Pay a flat price every month. No hidden fees, no surprises.
                                 </p>
                             </div>
                         </div>
                         <div class="col-md-6 padding-15 wow fadeInUp" data-wow-delay="500ms">
                             <div class="features-item offset-top">
-                                <img src="img/fee.svg" alt="img">
-                                <h3>Unlimited Seo and Digital
+                                <img src="img/prodesigner.svg" alt="img">
+                                <h3>Professional designers
                                 </h3>
-                                <p>SEO, Social Media, Audience Analytics, and more</p>
+                                <p>Get matched with high quality, battle-tested designers only.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -208,12 +223,12 @@
                         <a class="lightbox" href="geepee.html">
                             <img src="img/gpee-cover-min.jpg" alt="gateman">
                         </a>
-                    </div>             
+                    </div>
                     <div class="col-sm-12 col-md-4">
                         <a class="lightbox" href="jamawealth.html">
                             <img src="img/jamawealth.jpg" alt="Gateman">
                         </a>
-                    </div>      
+                    </div>
                     <div class="col-sm-12 col-md-4">
                         <a class="lightbox" href="img/bill-board-min.jpg">
                             <img src="img/bill-board-min.jpg" alt="Gateman">
@@ -244,7 +259,7 @@
                             <img src="img/sms.jpg" alt="Standee">
                         </a>
                     </div>
-            
+
 
                 </div>
 
@@ -335,7 +350,7 @@
             <p>Copyright 2019. All rights reserved.</p>
         </div>
     </footer>
-    
+
 
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
 
@@ -356,17 +371,17 @@
         baguetteBox.run('.tz-gallery');
     </script>
 
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/5eb7e6ee967ae56c52186cd9/default';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5eb7e6ee967ae56c52186cd9/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
     </script>
     <!--End of Tawk.to Script-->
 
