--- a/pricing.html
+++ b/pricing.html
@@ -62,7 +62,7 @@
 
     <section id="pricing" class="pricing-section bd-bottom p-t-160" tabindex="-1" style="outline: none;">
         <div class="shape"></div>
-        <div class="container">
+        <div class="container-fluid">
             <div class="col-md-8 offset-md-2 section-heading text-center mb-40">
                 <!-- <span>Plans &amp; Pricing</span> -->
                 <h1>Find the Pricing Plan that meets your business requirements</h1>
@@ -76,13 +76,13 @@
                             <h2>₹3,000/-</h2>
                             <p>Pay Per Request</p>
                         </div>
-                        <ul class="pricing-list">                            
+                        <ul class="pricing-list">
                             <li>1 Design Requests</li>
-                            <li>Unlimited Revisions</li>    
-                            <li>Logo Creation</li>         
-                            <li>Prints, Packaging, Social media designs and much much more.</li>                   
+                            <li>Unlimited Revisions</li>
+                            <!-- <li>Logo Creation</li>         
+                            <li>Prints, Packaging, Social media designs and much much more.</li>                    -->
                             <li>1 Brands</li>
-                            <li>48hrs Output</li>                                                     
+                            <li>48hrs Output</li>
                             <li>All source files delivered</li>
                             <li>No Long Term Contract</li>
                             <li>eMail Support</li>
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6 padding-15 wow fadeInUp" data-wow-delay="300ms"
+                <!-- <div class="col-lg-3 col-sm-6 padding-15 wow fadeInUp" data-wow-delay="300ms"
                     style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
                     <div class="pricing-box mid-pricing">
                         <div class="pricing-head">
@@ -117,7 +117,7 @@
                             <a href="contact.html" class="default-btn">Get Started</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-3 col-sm-6 padding-15 wow fadeInUp" data-wow-delay="400ms"
                     style="visibility: visible; animation-delay: 400ms; animation-name: fadeInUp;">
                     <div class="pricing-box">
@@ -127,14 +127,14 @@
                             <p>Monthly Unlimited Plan</p>
                         </div>
                         <ul class="pricing-list">
-                            <li>7 Day Money Back Guarantee</li>
+                            <li>14 Day Money Back Guarantee</li>
                             <li>Unlimited Design Requests</li>
                             <li>Unlimited Revisions</li>
                             <li>Unlimited Brands</li>
                             <li>24hrs Output</li>
-                            <li>Logo Creation</li>
+                            <!-- <li>Logo Creation</li>
                             <li>Apps look & feel</li>
-                            <li>Custom illustrations</li>
+                            <li>Custom illustrations</li> -->
                             <li>All source files delivered</li>
                             <li>No Long Term Contract</li>
                             <li>eMail Support</li>
@@ -149,24 +149,24 @@
                     <div class="pricing-box">
                         <div class="pricing-head">
                             <h3>PLUS</h3>
-                            <h2>₹25,000/-</h2>
+                            <h2>₹20,000/-</h2>
                             <p>Monthly Unlimited Plan</p>
                         </div>
                         <ul class="pricing-list">
-                            <li>7 Day Money Back Guarantee</li>
+                            <li>14 Day Money Back Guarantee</li>
                             <li>Unlimited Design Requests</li>
                             <li>Unlimited Revisions</li>
                             <li>Unlimited Brands</li>
                             <li>24hrs Output</li>
-                            <li>Logo Creation</li>
+                            <li>Logos & Branding</li>
                             <li>UI UX</li>
-                            <li>ecommerce</li>
+                            <li>Landing Page & Website Design</li>
+                            <!-- <li>ecommerce</li>
                             <li>SEO</li>
-                            <li>Social marketing</li>
+                            <li>Social marketing</li> -->
                             <li>HTML</li>
-                            <li>Wordpress</li>
+                            <!-- <li>Wordpress</li> -->
                             <li>Web Apps</li>
-                            <li>Custom illustrations</li>
                             <li>All source files delivered</li>
                             <li>No Long Term Contract</li>
                             <li>eMail Support</li>
@@ -176,6 +176,30 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-3 col-sm-6 padding-15 wow fadeInUp" data-wow-delay="400ms"
+                style="visibility: visible; animation-delay: 400ms; animation-name: fadeInUp;">
+                <div class="pricing-box">
+                    <div class="pricing-head">
+                        <h3>SEO/Digital Marketing</h3>
+                        <h2>₹12,000/-</h2>
+                        <p>Per Monthly</p>
+                    </div>
+                    <ul class="pricing-list">
+                        <li>14 Day Money Back Guarantee</li>
+                        <li>5 Post Designs a week</li>
+                        <li>Unlimited Revisions</li>                        
+                        <li>24hrs Output</li>                                               
+                        <li>SEO</li>
+                        <li>Social Media Marketing</li>
+                        <li>Google Ads</li>                                                
+                        <li>No Long Term Contract</li>
+                        <li>eMail Support</li>
+                    </ul>
+                    <div class="pricing-footer">
+                        <a href="contact.html" class="default-btn">Get Started</a>
+                    </div>
+                </div>
+            </div>
             </div>
         </div>
     </section>
@@ -279,16 +303,16 @@
 
     <script src="js/main.js"></script>
     <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/5eb7e6ee967ae56c52186cd9/default';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5eb7e6ee967ae56c52186cd9/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
     </script>
     <!--End of Tawk.to Script-->
 </body>
